# FRC2021

DriveAlgorithm/: CMakeLists.txt
DriveAlgorithm/RobotRedo/src/main/java/frc/robot/: Robot.java
DriveAlgorithm/RobotRedo/src/main/java/frc/robot/drive/: DriveTrain.java
DriveAlgorithm/RobotRedo/src/main/java/frc/robot/lib/: TimedAuto.java  Vector2.java  Vector3.java
DriveAlgorithm/RobotRedo/src/main/java/frc/robot/modules/: BNO08x.java  Intake.java  Pneumatics.java  Shooter.java
DriveAlgorithm/src/: main.c
JetsonVision/: CMakeLists.txt
JetsonVision/src/: main.cpp
PlotterProgram/: CMakeLists.txt  output.csv  route.csv
PlotterProgram/src/: main.c
RobotProgram/: TODO
RobotProgram/.wpilib/: wpilib_preferences.json
RobotProgram/src/main/java/frc/robot/: BNO08x.java  DriveMotors.java  Flywheel.java  Pneumatics.java  Robot.java  TeleopDrive.java  TimedAuto.java  Vector2.java  Vector3.java  YourMa.java
RobotProgram/src/main/java/frc/robot/auto/: AutoDrive.java  AutoInstruction.java  AutoRotate.java  AutoSequence.java
RobotProgram/src/main/java/frc/robot/drive/: AutoDrive.java  MecanumBuilder.java  MecanumDrive.java  NeoMotor.java  TeleopDrive.java  YourMa.java
RobotProgram/src/main/java/frc/robot/shooter/: Flywheel.java  Pneumatics.java  Revolver.java  ShootCoroutine.java
rotation/: quat2euler.h  rotation.ino
